--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,13 +1,44 @@
 #root {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: row;
 }
 
 .sidebar {
   width: 50px; /* Adjust the width as needed */
   height: 100%;
-  background-color: #f0f0f0; /* Change the background color as desired */
+  background-color: #f5f5f5; /* Change the background color as desired */
   padding: 5px;
+  border-right: 1px solid #d8d8d8;
+}
+
+.content {
+  width: 100%;
+}
+
+.inspector-container {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  gap: 20px;
+  > * {
+    border: 1px solid black;
+  }
+  > ul {
+    margin: 0;
+  }
+  > div > img {
+    max-width: 2000px;
+    max-height: 600px;
+  }
+}
+
+header {
+  height: 50px;
+  width: 100%;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #d8d8d8;
 }
 
 h2 {
@@ -31,4 +62,7 @@ li:hover {
 body {
   height: 100%;
   width: 100%;
+}
+area {
+  cursor: pointer;
 }
